<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tophaters.cookhelper.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:text="@string/clickHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="onClickTestIngredient" />

    <Button
        android:text="@string/testAddRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="onClickTestRecipe"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/addCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:id="@+id/button5"
        android:onClick="onClickTestCategory" />

    <Button
        android:text="@string/addOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/button4"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:onClick="onClickTestOrigin" />

    <Button
        android:text="Recipe View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_alignEnd="@+id/button3"
        android:layout_marginTop="25dp"
        android:id="@+id/button6"
        android:onClick="onClickTestRecipeView" />
</RelativeLayout>
