<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add__origin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tophaters.cookhelper.add_Origin"
    tools:showIn="@layout/activity_add__origin">

    <TextView
        android:text="@string/addOriginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/addCategoryTitle"
        android:layout_alignParentEnd="true"
        android:textSize="36sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/addCategoryTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:id="@+id/inputNewCategory"
        android:layout_alignParentEnd="true"
        android:hint="@string/typeOrigin" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputNewCategory"
        android:layout_alignParentEnd="true"
        android:id="@+id/saveButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/laraque"
        android:id="@+id/imageView3"
        android:layout_below="@+id/inputNewCategory"
        android:layout_alignParentStart="true" />
</RelativeLayout>
